--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^0.13.5
+  web3dart: ^2.3.6
+  image_picker: ^0.8.7
+  intl: ^0.17.0
+  sqflite: ^2.2.5
+  path: ^1.8.2
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
