--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.2.5
   path: ^1.8.2
   path_provider: ^2.0.14
+  share_plus: ^4.0.10
 
 dev_dependencies:
   flutter_test:
