--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.2.5
   path: ^1.8.2
   path_provider: ^2.0.14
+  encrypt: ^5.0.3
   # share_plus: any
   # flutter_share_me: ^1.3.1
 
