--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.14
   encrypt: ^5.0.3
+  qr_flutter: ^4.1.0
   # share_plus: any
   # flutter_share_me: ^1.3.1
 
