--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.14
   encrypt: ^5.0.3
   qr_flutter: ^4.1.0
+  shared_preferences: ^2.5.2
   # share_plus: any
   # flutter_share_me: ^1.3.1
 
